# grounded-rag-bedrock

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: chat.py
app/logs/: logger.py
app/rag/: citation.py
app/schemas/: response.py
app/services/: bedrock.py
app/utils/: config.py
frontend/: index.html  script.js  style.css
