[project]
name='company-policy-rag'
version='0.1.0'
dependencies = [
    "aiofiles>=25.1.0",
    "boto3>=1.43.18",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
